Add javascript for project

--- a/style/style.css
+++ b/style/style.css
@@ -84,5 +84,6 @@ a {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   width: 100%;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
