--- a/style/components/_layout.scss
+++ b/style/components/_layout.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-
 }
 
 .country {
@@ -36,4 +35,9 @@
     transform: translateX(-50%);
     width: 100%;
     color: $light;
+}
+
+.canvas {
+    max-width: 80%;
+    margin: 0 auto;
 }
