--- a/style/style.css
+++ b/style/style.css
@@ -86,4 +86,9 @@ a {
   width: 100%;
   color: #fff;
 }
+
+.canvas {
+  max-width: 80%;
+  margin: 0 auto;
+}
 /*# sourceMappingURL=style.css.map */
